changes/fixes/updates

--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
         <header class="masthead">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
-                    <div class="col-lg-6">
+                    <div class="col-lg-7">
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
-                            <h1 class="display-5 lh-1 mb-3">Unique Pattern Designs Made Just For You.</h1>
+                            <h1 class="display-6 lh-2 mb-3">Unique Pattern Designs Made Just For You.</h1>
                             <p class="lead fw-bold text-muted mb-5 textresponsive">XARIIA is an AI enabled e-commerce platform that transforms your personality traits and design preferences into unique and distinctive pattern print designs for clothing sold on the website.
                             </p>
                             <!-- <p class="lead fw-bold text-muted mb-5">             
@@ -168,23 +168,23 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 slideshow-container">
+                    <div class="col-lg-5 slideshow-container">
                         <div class="mySlides fade">
                             <div class="numbertext"></div>
-                            <img src="assets/product1.png" style="width:90%">
+                            <img class="sliderimg" src="assets/product1.png">
                             <div class="text"></div>
                           </div>
                           
                           
                           <div class="mySlides fade">
                             <div class="numbertext"></div>
-                            <img src="assets/product2.png" style="width:90%">
+                            <img class="sliderimg" src="assets/product2.png">
                             <div class="text"></div>
                           </div>
 
                           <div class="mySlides fade">
                             <div class="numbertext"></div>
-                            <img src="assets/product3.png" style="width:90%">
+                            <img class="sliderimg" src="assets/product3.png">
                             <div class="text"></div>
                           </div>
 
@@ -221,30 +221,11 @@
                 </div>
             </div>
         </header>
-        <!-- Quote/testimonial aside-->
-        <aside class="text-center bg-gradient-primary-to-secondary">
-            <div class="container px-5">
-                <div class="row gx-5 justify-content-center">
-                    <div class="col-xl-8">
-                        <div class="textblack lead mb-4">
-                            <h2 class="display-5 lh-1 mb-4">Mission & Vision</h2>
-                            <p class="fw-bold textresponsive">Our mission is to revolutionize custom fashion.<br>
-                                We accomplish this by:<br>
-                                - Using AI to automate and streamline the custom pattern print design process, thus simplifying it.<br>
-                                - Making high-fashion accessible and affordable for everyone worldwide.<br>
-                                - Selling a unique and distinct design while keeping the process of obtaining a piece simple and user-friendly.<br>
-                                - By being a pioneer in the digital and physical fashion spaces by providing custom designs for both, thus connecting them.<br>
-                                - Selling digital clothing that’s 96% more sustainable than Physical clothing and doing on-demand production for our physical clothes.<br></p>
-                        </div>
-                        <!-- <img src="assets/xariia.png" alt="xariia logo" style="height: 3rem" /> -->
-                    </div>
-                </div>
-            </div>
-        </aside>
+   
         <!-- App features section-->
         <section id="features">
             <div class="container px-5">
-                <h2 class="display-5 lh-1 mb-4">Futures & Technology
+                <h2 class="display-6 lh-1 mb-4">Features & Technology
                 </h2>
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-12 order-lg-1 mb-5 mb-lg-0">
@@ -321,6 +302,27 @@
                 </div>
             </div>
         </section>
+
+             <!-- Quote/testimonial aside-->
+             <aside class="text-center bg-gradient-primary-to-secondary">
+                <div class="container px-5">
+                    <div class="row gx-5 justify-content-center">
+                        <div class="col-xl-8">
+                            <div class="textblack lead mb-4">
+                                <h2 class="display-6 lh-1 mb-4">Mission & Vision</h2>
+                                <p class="fw-bold textresponsive">Our mission is to revolutionize custom fashion.<br>
+                                    We accomplish this by:<br>
+                                    - Using AI to automate and streamline the custom pattern print design process, thus simplifying it.<br>
+                                    - Making high-fashion accessible and affordable for everyone worldwide.<br>
+                                    - Selling a unique and distinct design while keeping the process of obtaining a piece simple and user-friendly.<br>
+                                    - By being a pioneer in the digital and physical fashion spaces by providing custom designs for both, thus connecting them.<br>
+                                    - Selling digital clothing that’s 96% more sustainable than Physical clothing and doing on-demand production for our physical clothes.<br></p>
+                            </div>
+                            <!-- <img src="assets/xariia.png" alt="xariia logo" style="height: 3rem" /> -->
+                        </div>
+                    </div>
+                </div>
+            </aside>
         <!-- Basic features section-->
          <!-- <section class="bg-light">
             <div class="container px-5">
@@ -401,7 +403,7 @@
         <section>
                 <div>
                     <div class="container px-5">
-                            <h2 class="display-5 lh-1 mb-4">Try Out Our Alpha Release</h2>
+                            <h2 class="display-6 lh-1 mb-4">Try Out Our Alpha Release</h2>
                     </div>
                     <div class="align-items-center justify-content-center">
                     <iframe  src="https://xariia.net/" scrolling="YES" webkitAllowFullScreen mozallowfullscreen allowFullScreen allowvr allow="autoplay"></iframe>
@@ -413,7 +415,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
-                        <h2 class="display-5 lh-1 mb-4">Products Use Cases</h2>
+                        <h2 class="display-6 lh-1 mb-4">Products Use Cases</h2>
                         <p class="lead fw-bold text-muted mb-5 mb-lg-0 textresponsive">
                             The purchased product can be used in the following ways: <br>
                             - Physical Products : Physically worn in real life as we will produce your chosen product based on your size and generated design. <br>
