--- a/index.html
+++ b/index.html
@@ -171,20 +171,20 @@
                     <div class="col-lg-5 slideshow-container">
                         <div class="mySlides fade">
                             <div class="numbertext"></div>
-                            <img class="sliderimg" src="assets/product1.png">
+                            <img class="img-fluid sliderimg" src="assets/product1.png">
                             <div class="text"></div>
                           </div>
                           
                           
                           <div class="mySlides fade">
                             <div class="numbertext"></div>
-                            <img class="sliderimg" src="assets/product2.png">
+                            <img class="img-fluid sliderimg" src="assets/product2.png">
                             <div class="text"></div>
                           </div>
 
                           <div class="mySlides fade">
                             <div class="numbertext"></div>
-                            <img class="sliderimg" src="assets/product3.png">
+                            <img class="img-fluid sliderimg" src="assets/product3.png">
                             <div class="text"></div>
                           </div>
 
