--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
         <section>
                 <div>
                     <div class="container px-5">
-                            <a href="https://xariia.net/" class="display-6 lh-1 mb-4">Try Out Our Alpha Release</a>
+                            <a href="https://xariia.net/" target="_blank" class="display-6 lh-1 mb-4">Try Out Our Alpha Release</a>
                     </div>
                     <!-- <div class="align-items-center justify-content-center">
                     <iframe  src="https://xariia.net/" scrolling="YES" webkitAllowFullScreen mozallowfullscreen allowFullScreen allowvr allow="autoplay"></iframe>
