--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                               </div>
                                           </form>
                                         </div>
-                                        <p class="fw-bold subscrib">Subscribe now to be kept up to date on our upcoming launch.</p>
+                                        <p class="fw-bold">Subscribe now to be kept up to date on our upcoming launch.</p>
                                     <!--End mc_embed_signup-->
                                 </div>
                             </div>
@@ -345,7 +345,7 @@
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
                         <h2 class="display-6 lh-1 mb-4">Products Use Cases</h2>
-                        <p class="lead fw-bold mb-5 mb-lg-0 textresponsive">
+                        <p class="lead fw-bold text-muted mb-5 mb-lg-0 textresponsive">
                             The purchased product can be used in the following ways: <br>
                             - Physical Products : Physically worn in real life as we will produce your chosen product based on your size and generated design. <br>
                             - Digital Products : Digitally worn in real life by using social media filters like Snapchat Lens and augmented reality applications Plus In the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox, where users can use their digital products to dress their avatars.<br>
@@ -471,7 +471,7 @@
                                               </div>
                                           </form>
                                         </div>
-                                        <p class="fw-bold subscrib">Subscribe now to be kept up to date on our upcoming launch.</p>
+                                        <p class="fw-bold">Subscribe now to be kept up to date on our upcoming launch.</p>
                                     <!--End mc_embed_signup-->
                                 </div>
                             </div>
@@ -499,7 +499,7 @@
                     <div class="col-lg-3">
                         <div class="col-lg-12 h-100 textcenterfootermedia my-auto">
                             <h4 class="font-alt">Contact Us</h4>
-                            <div class="fw-bold subscrib"><a href="mailto:info@xariia.com">info@xariia.com</a></div>
+                            <div class="fw-bold"><a href="mailto:info@xariia.com">info@xariia.com</a></div>
                         </div>
                     </div>
                 </div>
