--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-6 lh-2 mb-3">Unique Pattern Designs Made Just For You.</h1>
-                            <p class="lead fw-bold mb-5 textresponsive">XARIIA is an AI enabled e-commerce platform that transforms your personality traits and design preferences into unique and distinctive pattern print designs for clothing sold on the website.
+                            <p class=" fw-bold mb-5 textresponsive">XARIIA is an AI enabled e-commerce platform that transforms your personality traits and design preferences into unique and distinctive pattern print designs for clothing sold on the website.
                             </p>
                             
                             <!-- <p class="lead fw-bold text-muted mb-5">             
@@ -242,7 +242,7 @@
             <div class="container px-5">
                 <div class="row gx-5 justify-content-center">
                     <div class="col-xl-8">
-                        <div class="textblack lead mb-4">
+                        <div class="textblack mb-4">
                             <h2 class="display-6 lh-1 mb-4">Mission & Vision</h2>
                             <p class="fw-bold textresponsive">Our mission is to revolutionize custom fashion.<br>
                                 We accomplish this by:<br>
@@ -345,7 +345,7 @@
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
                         <h2 class="display-6 lh-1 mb-4">Products Use Cases</h2>
-                        <p class="lead fw-bold text-muted mb-5 mb-lg-0 textresponsive">
+                        <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
                             The purchased product can be used in the following ways: <br>
                             - Physical Products : Physically worn in real life as we will produce your chosen product based on your size and generated design. <br>
                             - Digital Products : Digitally worn in real life by using social media filters like Snapchat Lens and augmented reality applications Plus In the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox, where users can use their digital products to dress their avatars.<br>
