--- a/index.html
+++ b/index.html
@@ -350,12 +350,14 @@
                             - Physical Products : Physically worn in real life as we will produce your chosen product based on your size and generated design. <br>
                             - Digital Products : Digitally worn in real life by using social media filters like Snapchat Lens and augmented reality applications Plus In the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox, where users can use their digital products to dress their avatars.<br>
                             - Phygital Products : Physically + Digitally.
-                        </p>                    
+                        </p>    
                     </div>
                     <div class="col-sm-10 col-md-8 col-lg-6">
                         <div class="px-sm-0"><img class=" img-fluid" src="assets/usecase.png" alt="a t-shirt with a hawaian print" /></div>
                     </div>
                 </div>
+                <div class="fw-bold text-muted mb-5 mb-lg-0 textresponsive"><a href="https://xariia.net/" target="_blank">Try Out Our Alpha Release</a>
+
             </div>
         </section>
 
