--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
-            <!-- <div class="fixed-top hwrap">
+            <div class="fixed-top hwrap">
                 <div class="hmove">
                 <div class="hitem"><a href="https://xariia.net/" target="_blank">Try Out Our Alpha Release</a>
                 </div>
@@ -131,7 +131,7 @@
                 <div class="hitem"><a href="https://XARIIA.us1.list-manage.com/subscribe/post?u=515fdf03c460cd13fff01535c&id=233939e4f6" target="_blank">Join Our Email List</a></div> 
                 </div>
 
-            </div> -->
+            </div>
             <div class="container px-5 logomid">
                 <a href="#page-top" class="navbar-brand fw-bold"><img src="assets/logo.png" alt="XARIIA logo" class="img-fluid"></a>
                 <!-- <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
@@ -356,7 +356,7 @@
                         <div class="px-sm-0"><img class=" img-fluid" src="assets/usecase.png" alt="a t-shirt with a hawaian print" /></div>
                     </div>
                 </div>
-                <!-- <div class="fw-bold text-muted mb-5 mb-lg-0 textresponsive"><a href="https://xariia.net/" target="_blank">Try Out Our Alpha Release</a> -->
+                <div class="fw-bold text-muted mb-5 mb-lg-0 textresponsive"><a href="https://xariia.net/" target="_blank">Try Out Our Alpha Release</a>
 
             </div>
         </section>
