--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-6 lh-2 mb-3">Unique Pattern Designs Made Just For You.</h1>
-                            <p class=" fw-bold mb-5 textresponsive">XARIIA is an AI enabled e-commerce platform that transforms your personality traits and design preferences into unique and distinctive pattern print designs for clothing sold on the website.
+                            <p class=" fw-bold mb-5 textresponsive">XARIIA is the world's first immersive-commerce platform with an AI-powered print designer. <br>                 
                             </p>
                             
                             <!-- <p class="lead fw-bold text-muted mb-5">             
@@ -231,13 +231,11 @@
                     <div class="col-xl-8">
                         <div class="textblack mb-4">
                             <h2 class="display-6 lh-1 mb-4">Mission & Vision</h2>
-                            <p class="fw-bold textresponsive">Our mission is to revolutionize custom fashion.<br>
-                                We accomplish this by:<br>
-                                - Using AI to automate and streamline the custom pattern print design process, thus simplifying it.<br>
-                                - Making high-fashion accessible and affordable for everyone worldwide.<br>
-                                - Selling a unique and distinct design while keeping the process of obtaining a piece simple and user-friendly.<br>
-                                - By being a pioneer in the digital and physical fashion spaces by providing custom designs for both, thus connecting them.<br>
-                                - Selling digital clothing that’s 96% more sustainable than Physical clothing and doing on-demand production for our physical clothes.<br></p>
+                            <p class="fw-bold textresponsive">
+                                XARIIA's mission is to revolutionize bespoke fashion by automating the print design process, simplifying it, and making it accessible and affordable to everyone worldwide.<br>
+                                While a single print design takes hours to create, our generative algorithm creates unique and distinct designs in seconds, improving the user experience by allowing customers to view the designs in real-time (3D & AR) and experiment with many different combinations of trend preferences to get exactly what they want.<br>
+                                Sustainability is at the heart of XARIIA, which is a pioneer in digital fashion that is 95% more sustainable, and produces its physical fashion on demand, bringing digital and physical fashion together.              
+                            </p>    
                         </div>
                         <!-- <img src="assets/xariia.png" alt="xariia logo" style="height: 3rem" /> -->
                     </div>
@@ -331,12 +329,13 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
-                        <h2 class="display-6 lh-1 mb-4">Products Use Cases</h2>
+                        <h2 class="display-6 lh-1 mb-4">Products & Use Cases                        </h2>
                         <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
-                            The purchased product can be used in the following ways: <br>
-                            - Physical Products : Physically worn in real life as we will produce your chosen product based on your size and generated design. <br>
-                            - Digital Products : Digitally worn in real life by using social media filters like Snapchat Lens and augmented reality applications Plus In the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox, where users can use their digital products to dress their avatars.<br>
-                            - Phygital Products : Physically + Digitally.
+                            Physical Products : Physically worn in real life as we will produce your chosen product based on your size and generated design.<br>
+                            <br>
+                            Digital Products : Digitally worn in real life by using social media filters like Snapchat Lens and augmented reality applications Plus In the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox, where users can use their digital products to dress their avatars.<br>
+                            <br>
+                            Phygital Products : Physically + Digitally.
                         </p>    
                     </div>
                     <div class="col-sm-10 col-md-8 col-lg-6">
