team section and updates to the content

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-6 lh-2 mb-3">Unique Pattern Designs Made Just For You.</h1>
-                            <p class=" fw-bold mb-5 textresponsive">XARIIA is the world's first immersive-commerce platform with an AI-powered print designer. <br>                 
+                            <p class=" fw-bold mb-5 textresponsive">XARIIA is the world's first immersive-commerce platform with an AI-powered print designer for the clothing sold on the website.             
                             </p>
                             
                             <!-- <p class="lead fw-bold text-muted mb-5">             
@@ -232,9 +232,9 @@
                         <div class="textblack mb-4">
                             <h2 class="display-6 lh-1 mb-4">Mission & Vision</h2>
                             <p class="fw-bold textresponsive">
-                                XARIIA's mission is to revolutionize bespoke fashion by automating the print design process, simplifying it, and making it accessible and affordable to everyone worldwide.<br>
-                                While a single print design takes hours to create, our generative algorithm creates unique and distinct designs in seconds, improving the user experience by allowing customers to view the designs in real-time (3D & AR) and experiment with many different combinations of trend preferences to get exactly what they want.<br>
-                                Sustainability is at the heart of XARIIA, which is a pioneer in digital fashion that is 95% more sustainable, and produces its physical fashion on demand, bringing digital and physical fashion together.              
+                                XARIIA's mission is to revolutionize bespoke fashion by automating and simplifying the print design process, making it accessible and affordable to everyone worldwide.<br>
+                                While a single print design takes hours to create, our generative algorithm creates unique and distinctive designs in seconds and enhances the user experience by allowing customers to view designs in real-time (3D & AR) and experiment with many different combinations of trend preferences to get exactly what they want.<br>
+                                Sustainability is at the heart of XARIIA, a pioneer in the digital fashion space that is 96% more sustainable and produces its physical fashion products on demand, combining digital and physical fashion.<br>                              
                             </p>    
                         </div>
                         <!-- <img src="assets/xariia.png" alt="xariia logo" style="height: 3rem" /> -->
@@ -252,7 +252,7 @@
                     <div class="col-lg-12 order-lg-1 mb-5 mb-lg-0">
                         <div class="container-fluid px-5">
                             <div class="row gx-5">
-                                <div class="col-md-6 mb-5">
+                                <div class="col-md-6 mb-5 mb-md-0">
                                     <!-- Feature item-->
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/cloths.png" alt="a white t-shirt with no print"  />
@@ -261,14 +261,13 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="col-md-6 mb-5">
+                                <div class="col-md-6 mb-5 mb-md-0">
                                     <!-- Feature item-->
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/user-interface.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt featurestext">Design Preference Selector
                                         </h3>
                                         <p class="fw-bold mb-0 textresponsive">A user interface that makes collecting your design preferences as simple as possible.
-
                                         </p>
                                     </div>
                                 </div>
@@ -284,7 +283,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-md-6 mb-5 mb-md-0">
                                     <!-- Feature item-->
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/mockup-design.png" alt="a white t-shirt with no print"  />
@@ -344,6 +343,60 @@
                 </div>
 
                 <div class="mb-6 mb-lg-12 text-center text-lg-start"><a href="https://xariia.net/" target="_blank"><h4 class="font-alt margintop1rem">Try Out Our Alpha Release</h4></a></div>
+        </section>
+
+        <section id="features">
+            <div class="container px-5">
+                <h2 class="display-6 lh-1 mb-4">The Team
+                </h2>
+                <div class="row gx-5 align-items-center">
+                    <div class="col-lg-12 order-lg-1 mb-5 mb-lg-0">
+                        <div class="container-fluid px-5">
+                            <div class="row gx-5">
+                                <div class="col-md-3 mb-5 mb-md-0">
+                                    <!-- Feature item-->
+                                    <div class="text-center">
+                                        <img class="teamwidth" src="assets/shirakteamimg.png" alt="a white t-shirt with no print"  />
+                                        <p class="fw-bold mb-0 textresponsive">
+                                            <a href="https://www.linkedin.com/in/shirak-kevorkian/" target="_blank">Shirak Kevorkian</a><br>
+                                            CEO
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 mb-5 mb-md-0">
+                                    <!-- Feature item-->
+                                    <div class="text-center">
+                                        <img class="teamwidth" src="assets/varunteamimg.png" alt="a white t-shirt with no print"  />
+                                        <p class="fw-bold mb-0 textresponsive">
+                                            <a href="https://www.linkedin.com/in/jainvarunn/" target="_blank">Varun Jain</a><br>
+                                            Creative Director
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 mb-5 mb-md-0">
+                                    <!-- Feature item-->
+                                    <div class="text-center">
+                                        <img class="teamwidth" src="assets/amathteamimg.jpeg" alt="a white t-shirt with no print"  />
+                                        <p class="fw-bold mb-0 textresponsive">
+                                            <a href="https://www.linkedin.com/in/amathsow/" target="_blank">Amath Sow</a><br>
+                                            Software Engineer
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 mb-5 mb-md-0">
+                                    <!-- Feature item-->
+                                    <div class="text-center">
+                                        <img class="teamwidth" src="assets/sudheshteamimg.jpeg" alt="a white t-shirt with no print"  />
+                                        <p class="fw-bold mb-0 textresponsive">
+                                            <a href="https://www.linkedin.com/in/sudhesh-solomon/" target="_blank">Sudhesh Solomon</a><br>
+                                            ML Engineer
+                                        </p>
+                                    </div>     
+                                </div>
+                            </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!-- Basic features section-->
