--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                                         <img class="teamwidth" src="assets/amathteamimg.jpeg" alt="a white t-shirt with no print"  />
                                         <p class="fw-bold mb-0 textresponsive">
                                             <a href="https://www.linkedin.com/in/amathsow/" target="_blank">Amath Sow</a><br>
-                                            Software Engineer
+                                            Software / ML Engineer
                                         </p>
                                     </div>
                                 </div>
