--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -281,7 +281,7 @@
         <footer class="fw-bold bg-black text-center py-5">
             <div class="container px-5">
                 <div class=" text-white-50 small">
-                    <div class="mb-2">&copy; XARIIA 2022 All Rights Reserved.</div>
+                    <div class="mb-2">&copy;2022 XARIIA, Inc. All Rights Reserved</div>
                     <a href="privacy-policy.html">Privacy Policy</a>
                     <!-- <span class="mx-1">&middot;</span>
                     <a href="#!">Terms</a> -->
