Updates with demo added !

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-6 lh-2 mb-3">Unique Pattern Designs Made Just For You.</h1>
-                            <p class=" fw-bold mb-5 textresponsive">XARIIA is the world's first immersive-commerce platform with an AI-powered print designer for the clothing sold on the website.             
+                            <p class=" fw-bold mb-5 textresponsive">XARIA is the world's first immersive-commerce platform with an AI-enabled print designer for the garments sold on the platform.             
                             </p>
                             
                             <!-- <p class="lead fw-bold text-muted mb-5">             
@@ -232,9 +232,12 @@
                         <div class="textblack mb-4">
                             <h2 class="display-6 lh-1 mb-4">Mission & Vision</h2>
                             <p class="fw-bold textresponsive">
-                                XARIIA's mission is to revolutionize bespoke fashion by automating and simplifying the print design process, making it accessible and affordable to everyone worldwide.<br>
-                                While a single print design takes hours to create, our generative algorithm creates unique and distinctive designs in seconds and enhances the user experience by allowing customers to view designs in real-time (3D & AR) and experiment with many different combinations of trend preferences to get exactly what they want.<br>
-                                Sustainability is at the heart of XARIIA, a pioneer in the digital fashion space that is 96% more sustainable and produces its physical fashion products on demand, combining digital and physical fashion.<br>                              
+                                XARIIA's vision is to streamline custom fashion,  is achieved by :<br>
+                                Simplifying the process.<br>
+                                Reducing costs by shortening the time needed for a design.<br>
+                                Creating designs instantly and allowing customers to see the custom design before purchasing.<br>
+                                Providing each customer with a unique and custom design.<br>
+                                Reducing waste through on-demand production and promoting digital fashion that is 96% more sustainable.
                             </p>    
                         </div>
                         <!-- <img src="assets/xariia.png" alt="xariia logo" style="height: 3rem" /> -->
@@ -295,6 +298,7 @@
                                 </div>
                             </div>
                     </div>
+
                     <!-- <div class="col-lg-4 order-lg-0">
                         <div class="features-device-mockup">
                             <svg class="circle" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
@@ -323,18 +327,24 @@
             </div>
         </section>
 
+        <section>
+            <div class="container px-5">
+                <h2 class="display-6 lh-1 mb-4">Demo</h2>
+                <iframe src="https://www.youtube.com/embed/d6gAJ5y5YyY">
+                </iframe>
+            </div>
+        </section>
+
 
         <section class="bg-light">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
-                        <h2 class="display-6 lh-1 mb-4">Products & Use Cases                        </h2>
+                        <h2 class="display-6 lh-1 mb-4">Products & Use Cases </h2>
                         <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
-                            Physical Products : Physically worn in real life as we will produce your chosen product based on your size and generated design.<br>
-                            <br>
-                            Digital Products : Digitally worn in real life by using social media filters like Snapchat Lens and augmented reality applications Plus In the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox, where users can use their digital products to dress their avatars.<br>
-                            <br>
-                            Phygital Products : Physically + Digitally.
+                            Physical Garments : Physically worn in real life as we will produce your chosen product based on your size and generated design. <br><br>
+                            Digital Garments / NFT : Digitally worn in real life by using social media filters like Snapchat Lens and augmented reality applications Plus In the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox, where users can use their digital products to dress their avatars.<br><br>
+                            Phygital Garments / NFT : Physically + Digitally.
                         </p>    
                     </div>
                     <div class="col-sm-10 col-md-8 col-lg-6">
