--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -120,7 +120,7 @@
 
             </div>
             <div class="container px-5 logomid">
-                <a href="#page-top" class="navbar-brand fw-bold"><img src="assets/logo.png" alt="XARIIA logo" class="img-fluid"></a>
+                <a href="index.html" class="navbar-brand fw-bold"><img src="assets/logo.png" alt="XARIIA logo" class="img-fluid"></a>
                 <!-- <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
                     <span class="d-flex align-items-center">
                         <span class="small">Subscribe</span>
