--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 <div class="mb-6 mb-lg-12 text-center text-lg-start"><a href="https://xariia.net/" target="_blank"><h4 class="font-alt margintop1rem">Try Out Our Alpha Release</h4></a></div>
         </section>
 
-        <section id="features">
+        <!-- <section id="features">
             <div class="container px-5">
                 <h2 class="display-6 lh-1 mb-4">The Team
                 </h2>
@@ -364,7 +364,6 @@
                         <div class="container-fluid px-5">
                             <div class="row gx-5">
                                 <div class="col-md-3 mb-5 mb-md-0">
-                                    <!-- Feature item-->
                                     <div class="text-center">
                                         <img class="teamwidth" src="assets/shirakteamimg.png" alt="a white t-shirt with no print"  />
                                         <p class="fw-bold mb-0 textresponsive">
@@ -374,7 +373,6 @@
                                     </div>
                                 </div>
                                 <div class="col-md-3 mb-5 mb-md-0">
-                                    <!-- Feature item-->
                                     <div class="text-center">
                                         <img class="teamwidth" src="assets/varunteamimg.png" alt="a white t-shirt with no print"  />
                                         <p class="fw-bold mb-0 textresponsive">
@@ -384,7 +382,6 @@
                                     </div>
                                 </div>
                                 <div class="col-md-3 mb-5 mb-md-0">
-                                    <!-- Feature item-->
                                     <div class="text-center">
                                         <img class="teamwidth" src="assets/amathteamimg.jpeg" alt="a white t-shirt with no print"  />
                                         <p class="fw-bold mb-0 textresponsive">
@@ -394,7 +391,6 @@
                                     </div>
                                 </div>
                                 <div class="col-md-3 mb-5 mb-md-0">
-                                    <!-- Feature item-->
                                     <div class="text-center">
                                         <img class="teamwidth" src="assets/sudheshteamimg.jpeg" alt="a white t-shirt with no print"  />
                                         <p class="fw-bold mb-0 textresponsive">
@@ -407,7 +403,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- Basic features section-->
          <!-- <section class="bg-light">
