--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                     </div>
                 </div>
 
-                <div class="mb-6 mb-lg-12 text-center text-lg-start"><a href="https://xariia.net/" target="_blank"><h4 class="font-alt margintop1rem">Try Out Our Alpha Release</h4></a></div>
+                <!-- <div class="mb-6 mb-lg-12 text-center text-lg-start"><a href="https://xariia.net/" target="_blank"><h4 class="font-alt margintop1rem">Try Out Our Alpha Release</h4></a></div> -->
         </section>
 
         <!-- <section id="features">
